infra/kubernetes-manifests/envoy-routes/external-backend-sample.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-domain-sample-route
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "external-domain.example.com"
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: external-domain-sample-backend
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: httpbin.org
      matches:
        - path:
            type: PathPrefix
            value: /
